# osynic_osuapi

./: CHANGELOG.md  Cargo.toml  README.md  README_EN.md
.github/workflows/: ci.yml
examples/: e.rs  fg.rs  fgx.rs  gb.rs  gur.rs  ug.rs
src/: lib.rs  prelude.rs  wasm.rs
src/v1/client/gloo/: client.rs  mod.rs  serde.rs
src/v1/client/gloo/api/: beatmap.rs  multiplayer.rs  replay.rs  scores.rs  user.rs
src/v1/model/: beatmap.rs  best.rs  multiplayer.rs  recent.rs  replay.rs  scores.rs  user.rs
src/v2/client/gloo/: client.rs  serde.rs
src/v2/client/gloo/api/: beatmaps.rs  beatmapsets.rs  changelog.rs  chat.rs  comments.rs  events.rs  forum.rs  friends.rs  matches.rs  multiplayer.rs  news.rs  notifications.rs  oauth.rs  ranking.rs  scores.rs  search.rs  users.rs  wiki.rs
src/v2/client/request/: client.rs
src/v2/client/request/api/: friends.rs  mod.rs  users.rs
src/v2/interface/: friends.rs  mod.rs  users.rs
src/v2/model/: friend.rs  mod.rs  wiki.rs
src/v2/model/beatmap/structs/: beatmap.rs  beatmap_playcount.rs  beatmaps.rs  difficulty_attributes.rs  pack.rs  packs.rs
src/v2/model/beatmapset/enums/: status.rs
src/v2/model/beatmapset/structs/: availability.rs  beatmapset.rs  covers.rs  nominations_summary.rs  required_meta.rs
src/v2/model/changelog/structs/: build.rs  changelog.rs  news.rs  search.rs  stream.rs  versions.rs
src/v2/model/chat/dtos/: request.rs  response.rs
src/v2/model/chat/enums/: channel_type.rs
src/v2/model/chat/structs/: channel.rs  message.rs  silences.rs  user_silence.rs
src/v2/model/comment/structs/: bundle.rs  comment.rs  meta.rs  user.rs
src/v2/model/event/dtos/: response.rs
src/v2/model/event/structs/: event.rs
src/v2/model/forum/dtos/: request.rs  response.rs
src/v2/model/forum/structs/: forum.rs  forums.rs  post.rs  topic.rs
src/v2/model/matches/dtos/: response.rs
src/v2/model/matches/structs/: matches.rs
src/v2/model/mode/enums/: mode.rs
src/v2/model/news/dtos/: response.rs
src/v2/model/news/structs/: navigation.rs  news.rs
src/v2/model/notification/dtos/: request.rs  response.rs
src/v2/model/notification/structs/: notifications.rs
src/v2/model/oauth/enums/: scope.rs
src/v2/model/oauth/structs/: o_token.rs
src/v2/model/ranking/enums/: ranking_type.rs
src/v2/model/ranking/structs/: rankings.rs  spotlight.rs  spotlights.rs
src/v2/model/room/structs/: difficulty_range.rs  host.rs  playlist.rs  playlist_mod.rs  recent_participant.rs  room.rs
src/v2/model/score/dtos/: response.rs
src/v2/model/score/enums/: mod.rs  rank.rs  score_type.rs
src/v2/model/score/structs/: beatmap_scores.rs  beatmap_user_score.rs  current_user_attributes.rs  (+9 more)
wasm/: CHANGELOG.md  Cargo.toml  LICENSE  README.md  README_EN.md
wasm/examples/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
wasm/examples/src/: App.vue  V1.vue  index.css
wasm/src/: lib.rs
(+48 files in other folders)
